--- a/my_newsapp/static/my_newsapp/home_style.css
+++ b/my_newsapp/static/my_newsapp/home_style.css
@@ -70,22 +70,39 @@ a:hover {
   background-color: #fff;
 }
 
-.navbar-nav li:hover > ul.dropdown-menu {
+/* open all dropdown-menus on hover */
+/* .navbar-nav li:hover > ul.dropdown-menu {
+  display: block;
+} */
+
+/* opens only dropdown-submenu on hover */
+.dropdown-menu li:hover > ul.dropdown-menu {
   display: block;
 }
+
+
 .dropdown-submenu {
   position:relative;
 }
+
 .dropdown-submenu>.dropdown-menu {
   top:0;
   left:100%;
   margin-top:-6px;
 }
 
-/* rotate caret on hover */
-.dropdown-menu > li > a:hover:after {
+/* rotate caret and align it right status */
+.dropdown-menu > li > a:after {
+  float: right;
+  margin-top: 9px;
   text-decoration: underline;
   transform: rotate(-90deg);
 } 
+
+/* rotate caret on hover */
+/* .dropdown-menu > li > a:hover:after {
+  text-decoration: underline;
+  transform: rotate(-90deg);
+}  */
 
 
