--- a/my_newsapp/templates/my_newsapp/home_navbar.html
+++ b/my_newsapp/templates/my_newsapp/home_navbar.html
@@ -26,14 +26,14 @@
                   {% comment %} are there articles in a category? If yes, create category submenu {% endcomment %}
                   {% if category.articles.all %}
                     <li class="dropdown-submenu">
-                      <a class="dropdown-item dropdown-toggle" href="#">{{ category.title }}</a>
+                      <a class="dropdown-item dropdown-toggle" href="{{ category.get_absolute_url }}">{{ category.title }}</a>
                       {% comment %} list of categorie's articles {% endcomment %}
                       <ul class="dropdown-menu">
                         {% for article in articles %}
                         {% comment %} does article belong to this category? {% endcomment %}
                           {% if article.category.title == category.title %}
                             <li>
-                              <a class="dropdown-item" href="#">{{ article.title }}</a>
+                              <a class="dropdown-item" href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                             </li>
                           {% endif %}
                         {% endfor %}
