--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <title>{% block title%}{% endblock title%}</title>
   {% block style %}
     <link rel="stylesheet" href="{% static 'css/bootstrap-4.0.0.css' %}">
+    <link rel="stylesheet" href="{% static 'my_newsapp/home_style.css' %}">   
   {% endblock style %}
 </head>
 <body>
