--- a/my_newsapp/static/my_newsapp/home_style.css
+++ b/my_newsapp/static/my_newsapp/home_style.css
@@ -9,11 +9,11 @@ nav a:hover {
   text-decoration: none;  
 }
 
-h3 a {
+h3 a, p a {
   color: rgb(49, 49, 49);
 }
 
-h3 a:hover {
+h3 a:hover, p a:hover  {
   color: rgb(105, 102, 102);
   text-decoration: none;
 }
