--- a/templates/base.html
+++ b/templates/base.html
@@ -32,15 +32,32 @@
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'my_newsapp:latest-articles' %}">Latest Articles</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Categories
           </a>
-
-          {% block navbar_categories_dropdown %}
-            
-          {% endblock navbar_categories_dropdown %}
-                                                    
+          {% comment %} categories list {% endcomment %}
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          {% for category in categories %}
+            {% comment %} are there articles in a category? If yes, create category submenu {% endcomment %}
+            {% if category.articles.all %}
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="{{ category.get_absolute_url }}">{{ category.title }}</a>
+                {% comment %} list of categorie's articles {% endcomment %}
+                <ul class="dropdown-menu">
+                  {% for article in category.articles.all %}
+                    <li>
+                      <a class="dropdown-item" href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+                    </li>
+                  {% endfor %}
+                </ul>
+              </li>  
+            {% endif %}       
+          {% endfor %}
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
