--- a/my_newsapp/templates/my_newsapp/home.html
+++ b/my_newsapp/templates/my_newsapp/home.html
@@ -19,10 +19,92 @@
 
 
 {% block content %}
-  
+  <div class="container home mt-60px mb-80px" style="max-height: 750px;">
+      <div class="row">
+        {% comment %} Left column - Primary category articles {% endcomment %}
+        <div class="col-md-7 border-right">
+          {% if primary_category %}
+            <h1 class="pb-3" style="font-weight: 700">{{ primary_category.title }}</h1>
+            {% for article in primary_category.articles.all|slice:':3'  %}
+            <div class="container">
+                  <div class="row padding-top-20 padding-bottom-20 padding-right-20">
+
+                        <div class="col-md-3 pl-0 pt-1">
+                          <img src="{% thumbnail article.thumbnail_image 150x150 crop %}">
+                        </div>
+
+                        <div class="col-md-9 max-lines fade-out" style="max-height: 150px;">
+                              <div class="row pl-3">
+                                <h3><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
+                              </div>
+                              <div class="row pl-3 text-lightbrown">
+                                <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
+                              </div>
+                              <div class="row pl-3">
+                                <p  style="color: rgb(63, 63, 63)">{{ article.short_description }}</p>
+                              </div>                                              
+                        </div> 
+
+                  </div>
+                  <hr>
+            </div>
+            {% endfor %}
+          {% endif %}
+        </div> {% comment %} end of left column - primary category {% endcomment %}
+        {% comment %} right column {% endcomment %}
+        <div class="col-md-5 mt-1 pl-4">
+        {% comment %} secondary category articles  {% endcomment %}  
+        <div class="row">  
+          {% if secondary_category %}
+            <h2 class="pb-3 pl-3" style="font-weight: 500">{{ secondary_category.title }}</h2>
+            {% for article in secondary_category.articles.all|slice:':2'  %}
+            <div class="container">
+                  <div class="row padding-right-20 pb-3">                    
+                        <div class="col-md-12 max-lines fade-out" style="max-height: 150px;">
+                              <div class="row pl-3">
+                                <h4><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h4>
+                              </div>
+                              <div class="row pl-3 text-lightbrown">
+                                <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
+                              </div>
+                              <div class="row pl-3">
+                                <p style="color: rgb(63, 63, 63)">{{ article.short_description }}</p>
+                              </div>                                              
+                        </div>            
+                  </div>
+            </div>
+            {% endfor %}
+          {% endif %}
+        </div> {% comment %} end of secondary category articles  {% endcomment %}
+        <hr class="mt-0">
+          {% comment %} other articles  {% endcomment %}
+          <div class="row">
+              {% for article in rand_articles|slice:':6' %}
+                {% if forloop.counter == 1   %}
+                {% comment %} openning left column div {% endcomment %}
+                <div id=otherArticlesLeftColumn class="col-md-6 border-right" style="max-height: 334px; min-height: 334px;">
+                  {% include 'my_newsapp/snippets/other_article.html' %}
+                {% elif forloop.counter == 2 or forloop.counter == 3 %}
+                  {% include 'my_newsapp/snippets/other_article.html' %}  
+                {% elif forloop.counter == 4 %}
+                </div>   {% comment %} closing left column div {% endcomment %}
+                {% comment %} openning right column div {% endcomment %}
+                <div id=otherArticlesRightColumn class="col-md-6 pl-4" style="max-height: 334px; min-height: 334px;">
+                  {% include 'my_newsapp/snippets/other_article.html' %}
+                {% elif forloop.counter == 5 %} 
+                  {% include 'my_newsapp/snippets/other_article.html' %}  
+                {% elif forloop.counter == 6 %} 
+                  {% include 'my_newsapp/snippets/other_article.html' %}  
+                </div>  {% comment %} closing right column div {% endcomment %}
+                {% endif %}  
+              {% endfor %}
+          </div> {% comment %} end of other articles  {% endcomment %}
+        </div> {% comment %} end of right column  {% endcomment %}
+      </div>
+  </div>
 {% endblock content %}
 
 {% block script %}
   {{ block.super }}
-  <script src="{% static 'my_newsapp/script.js' %}"></script>
+  <script src="{% static 'my_newsapp/home.js' %}"></script>
 {% endblock script %}
