--- a/my_newsapp/templates/my_newsapp/latest_articles.html
+++ b/my_newsapp/templates/my_newsapp/latest_articles.html
@@ -20,8 +20,8 @@
 
 
 {% block content %}
-  <div class="container">
-    <h1 class="padding-top-30 padding-bottom-30 text-cornflowerblue">Latest Articles</h1>
+  <div class="container mt-60px">
+    <h2 class="padding-bottom-30 text-cornflowerblue">Latest Articles</h2>
     <hr>
   </div>
   {% for article in articles  %}
