--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,7 @@
   {% block script %}
     <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
     <script src="{% static 'js/bootstrap-4.0.0.js' %}"></script>
+    <script src="{% static 'my_newsapp/script.js' %}"></script>
   {% endblock script %}
 </body>
 </html>
