--- a/my_newsapp/templates/my_newsapp/home.html
+++ b/my_newsapp/templates/my_newsapp/home.html
@@ -23,7 +23,7 @@
       <div class="row">
         {% comment %} Left column - Primary category articles {% endcomment %}
         <div class="col-md-7 border-right">
-          {% if primary_category %}
+          
             <h1 class="pb-3" style="font-weight: 700">{{ primary_category.title }}</h1>
             {% for article in primary_category.articles.all|slice:':3'  %}
             <div class="container">
@@ -49,13 +49,11 @@
                   <hr>
             </div>
             {% endfor %}
-          {% endif %}
         </div> {% comment %} end of left column - primary category {% endcomment %}
         {% comment %} right column {% endcomment %}
         <div class="col-md-5 mt-1 pl-4">
         {% comment %} secondary category articles  {% endcomment %}  
         <div class="row">  
-          {% if secondary_category %}
             <h2 class="pb-3 pl-3" style="font-weight: 500">{{ secondary_category.title }}</h2>
             {% for article in secondary_category.articles.all|slice:':2'  %}
             <div class="container">
@@ -74,12 +72,11 @@
                   </div>
             </div>
             {% endfor %}
-          {% endif %}
         </div> {% comment %} end of secondary category articles  {% endcomment %}
         <hr class="mt-0">
           {% comment %} other articles  {% endcomment %}
           <div class="row">
-              {% for article in rand_articles|slice:':6' %}
+              {% for article in other_articles|slice:':6' %}
                 {% if forloop.counter == 1   %}
                 {% comment %} openning left column div {% endcomment %}
                 <div id=otherArticlesLeftColumn class="col-md-6 border-right" style="max-height: 334px; min-height: 334px;">
