Pagination finished for LatestArticles Page, scroll position preservation added

--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -45,4 +45,8 @@
 
 {% block script %}
   {{ block.super }}
+  <script>
+    //On detail page, always scroll to the top of article
+    window.scrollTo(0, 250);
+</script>
 {% endblock script %}
