--- a/my_newsapp/templates/my_newsapp/snippets/pagination.html
+++ b/my_newsapp/templates/my_newsapp/snippets/pagination.html
@@ -7,6 +7,12 @@
           <span class="sr-only">Previous</span>
         </a>
       </li>
+    {% else %}  
+    <li class="page-item">
+      <a class="page-link disabled">
+        <span>&laquo;</span>
+      </a>
+    </li>
     {% endif %}
     {% for i in paginator.page_range %}
       {% if page_obj.number == i %}
@@ -24,6 +30,12 @@
           <span class="sr-only">Next</span>
         </a>
       </li>
+    {% else %}  
+      <li class="page-item">
+        <a class="page-link disabled">
+          <span>&raquo;</span>
+        </a>
+      </li> 
     {% endif %}
   </ul>
 </div>
