--- a/my_newsapp/static/my_newsapp/home_style.css
+++ b/my_newsapp/static/my_newsapp/home_style.css
@@ -9,6 +9,15 @@ nav a:hover {
   text-decoration: none;  
 }
 
+a.cat-title {
+  color: rgb(49, 49, 49);
+}
+
+a.cat-title:hover {
+  color: rgb(105, 102, 102);
+  text-decoration: none;
+}
+
 h3 a, h4 a, h5 a, p a {
   color: rgb(49, 49, 49);
 }
