--- a/my_newsapp/templates/my_newsapp/category.html
+++ b/my_newsapp/templates/my_newsapp/category.html
@@ -2,7 +2,11 @@
 
 {% load staticfiles thumbnail %}
 
-{% block title %}{{ category.title }}{% endblock title %}
+{% comment %} 
+  Pošto svi artikli imaju istu kategoriju, njoj pristupam preko articles.first što vraća prvi article iz QuerySet-a.
+  Tako nema potrebe za override-anjem get_context_data metode i dodavanja kategorije kao poseban value u context.
+{% endcomment %}
+{% block title %}{{ articles.first.category.title }}{% endblock title %}
 
 {% block style %}
   {{ block.super }}
@@ -11,30 +15,24 @@
 {% block jumbo %}
   {% comment %} Dodaje pozadinsku sliku iz image field-a Category {% endcomment %}
   <div class="jumbotron jumbotron-fluid category-view"
-       style="background-image: url('{{ category.image.url }}');
+       style="background-image: url('{{ articles.first.category.image.url }}');
               background-size: cover">
   </div>
 {% endblock jumbo %}
 
-{% block navbar_categories_dropdown %}
-  {% comment %} categories list {% endcomment %}
-  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-    {% for category in categories %}
-      {% if category.articles.all %}
-      <li>
-        <a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.title }}</a>
-      </li>
-      {% endif %}       
-    {% endfor %}
-  </ul>
-{% endblock navbar_categories_dropdown %}
-
 {% block content %}
+
   <div class="container mt-60px">
-    <h2 class="padding-bottom-30 text-cornflowerblue">{{ category.title }}</h2>
-    <hr>
-  </div>
-  {% for article in category.articles.all  %}
+      <h2 class="padding-bottom-20 text-cornflowerblue">{{ articles.first.category.title }}</h2>
+    </div>
+    {% if is_paginated %}
+      {% include 'my_newsapp/snippets/pagination.html' %}
+    {% endif %}
+    <div class="container">
+      <hr>
+    </div>
+
+  {% for article in articles  %}
   <div class="container">
     <div class="row padding-top-20 padding-bottom-20">
       <div class="col-md-2">
@@ -52,6 +50,12 @@
     <hr>
   </div>
 {% endfor %}
+
+{% if is_paginated %}
+  <div class="mt-5 mb-5">
+    {% include 'my_newsapp/snippets/pagination.html' %}
+  </div>
+{% endif %}
   
 {% endblock content %}
 
