--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <button type="button" class="btn btn-success">
-      <a href="#">Write something</a>
+      <a href="{% url 'my_newsapp:create-article' %}">Write something</a>
     </button>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
